e2e/tests/all/snapshots/cascader_any_level_rest_mobile.snap
---
source: e2e/src/suite.rs
description: cascader_any_level at mobile (rest)
expression: tree
---
LabelText
  StaticText "Place"
combobox "Place" [expanded=false] [haspopup=listbox]
status [atomic] [live=polite]
paragraph
