e2e/tests/all/snapshots/cascader_drilled_mobile.snap
---
source: e2e/src/suite.rs
description: cascader at mobile (drilled)
expression: tree
---
LabelText
  StaticText "Place"
combobox "Place" [expanded] [haspopup=listbox]
status [atomic] [live=polite]
paragraph
listbox "Place"
  option "Europe" [selected]
    StaticText "Europe"
  option "Asia" [disabled] [selected=false]
    StaticText "Asia"
  option "Oceania" [selected=false]
    StaticText "Oceania"
listbox "Europe"
  option "France" [selected]
    StaticText "France"
  option "Germany" [selected=false]
    StaticText "Germany"
--> aria-controls [id="lsx-N-listbox-1"] (rendered above)
