e2e/tests/all/snapshots/cascader_open_desktop.snap
---
source: e2e/src/suite.rs
description: cascader at desktop (open)
expression: tree
---
LabelText
  StaticText "Place"
combobox "Place" [expanded] [haspopup=listbox]
status [atomic] [live=polite]
paragraph
listbox "Place"
  option "Europe" [selected]
    StaticText "Europe"
  option "Asia" [disabled] [selected=false]
    StaticText "Asia"
  option "Oceania" [selected=false]
    StaticText "Oceania"
--> aria-controls [id="lsx-N-listbox-0"] (rendered above)
