e2e/tests/all/snapshots/cascader_paths_rest_desktop.snap
---
source: e2e/src/suite.rs
description: cascader_paths at desktop (rest)
expression: tree
---
LabelText
  StaticText "Place"
combobox "Place" [expanded=false] [haspopup=listbox]
status [atomic] [live=polite]
