e2e/tests/all/snapshots/cascader_rest_desktop.snap
---
source: e2e/src/suite.rs
description: cascader at desktop (rest)
expression: tree
---
LabelText
  StaticText "Place"
generic
  combobox "Place" [expanded=false] [haspopup=listbox]
paragraph
