e2e/tests/all/snapshots/cascader_rest_mobile.snap
---
source: e2e/src/suite.rs
description: cascader at mobile (rest)
expression: tree
---
LabelText
  StaticText "Place"
generic
  combobox "Place" [expanded=false] [haspopup=listbox]
status [atomic] [live=polite]
paragraph
