e2e/tests/all/snapshots/cascader_search_open_mobile.snap
---
source: e2e/src/suite.rs
description: cascader_search at mobile (open)
expression: tree
---
LabelText
  StaticText "Place"
StaticText "Where the parcel goes."
generic [haspopup=listbox]
status [atomic] [live=polite]
StaticText "Cities only."
StaticText "Pick a place."
combobox "Place" [autocomplete=list] [expanded] [haspopup=listbox] [invalid] [required]
  description "Where the parcel goes. Cities only. Pick a place."
listbox "Place" [orientation=vertical]
  option "Europe" [selected]
    StaticText "Europe"
  option "Asia" [disabled] [selected=false]
    StaticText "Asia"
  option "Oceania" [selected=false]
    StaticText "Oceania"
--> aria-controls [id="lsx-N-listbox-0"] (rendered above)
